Some horizontal scrolling added w/ issues

--- a/synccircle/src/components/Group-UserPage/UserPageOverhaul.css
+++ b/synccircle/src/components/Group-UserPage/UserPageOverhaul.css
@@ -261,14 +261,32 @@ body {
     align-items: center;
 }
 
+.CalendarContainer {
+    display: flex;
+    align-items: flex-start;
+    overflow-y: auto;
+  }
+
+  .TimeLabelContainer {
+    display: flex;
+    flex-direction: column;
+    grid-template-rows: repeat(24, 1fr);
+    justify-content: flex-start;
+    background-color: white;
+    border-right: 1px solid #ccc;
+    z-index: 1;
+    width: 
+  }
+
 .CalendarGrid {
     position: relative;
     display: grid;
     grid-template-columns: 1.6fr repeat(7, 1fr);
     grid-template-rows: repeat(24, 1fr);
     flex-grow: 1;
+    grid-auto-flow: column;
     place-items: center;
-    overflow-y: auto;
+    overflow-x: auto;
     min-height: 0px;
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
     margin-bottom: 3%;
